--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MathARQuiz3"></activity>
+        <activity android:name=".MathAR3"></activity>
+        <activity android:name=".MathAR2" />
+        <activity android:name=".MathAR1" />
+        <activity android:name=".MathARQuiz3" />
         <activity android:name=".MathARQuiz2" />
         <activity android:name=".MathARQuiz1" />
         <activity android:name=".MathArithOperationContentPage" />
