--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MathNN3"></activity>
+        <activity android:name=".MathNNQuiz3"></activity>
+        <activity android:name=".MathNNQuiz2" />
+        <activity android:name=".MathNNQuiz1" />
+        <activity android:name=".MathNN3" />
         <activity android:name=".MathNN2" />
         <activity android:name=".MathNN1" />
         <activity android:name=".MathNegNumContentPage" />
