--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RateContentPage"></activity>
+        <activity android:name=".MathAR3"></activity>
+        <activity android:name=".RateContentPage" />
         <activity android:name=".MathPropNumContentPage" />
         <activity android:name=".MathPN3" />
         <activity android:name=".MathPN2" />
@@ -24,7 +25,6 @@
         <activity android:name=".MathNN2" />
         <activity android:name=".MathNN1" />
         <activity android:name=".MathNegNumContentPage" />
-        <activity android:name=".MathAR3" />
         <activity android:name=".MathAR2" />
         <activity android:name=".MathAR1" />
         <activity android:name=".MathARQuiz3" />
