--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".MathAR3" />
         <activity android:name=".RateContentPage" />
         <activity android:name=".MathPropNumContentPage"
-            />
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".MathPN3" />
         <activity android:name=".MathPN2" />
         <activity android:name=".MathPN1" />
@@ -28,6 +28,7 @@
         <activity android:name=".MathNN3" />
         <activity android:name=".MathNN1" />
         <activity android:name=".MathNegNumContentPage"
+            android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".MathAR2" />
         <activity android:name=".MathAR1" />
@@ -35,6 +36,7 @@
         <activity android:name=".MathARQuiz2" />
         <activity android:name=".MathARQuiz1" />
         <activity android:name=".MathArithOperationContentPage"
+            android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".MathPercentageContent" />
         <activity android:name=".MathQuizPercentage" />
@@ -44,9 +46,11 @@
             android:label="@string/title_activity_ratio_content_page"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MathContentActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".MathRatioQuiz1" />
         <activity android:name=".MathRatioPage"
+            android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
