--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -12,51 +12,83 @@
         <service
             android:name=".MusicService"
             android:enabled="true" />
-        <activity android:name=".MathNN2"></activity>
-        <activity android:name=".MathPNx" />
-        <activity android:name=".MathPN4" />
-        <activity android:name=".MathAR3" />
-        <activity android:name=".RateContentPage" />
+        <activity android:name=".MathNN2"
+            android:screenOrientation = "portrait"></activity>
+        <activity android:name=".MathPNx"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathPN4"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathAR3"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".RateContentPage"
+            android:screenOrientation = "portrait"/>
         <activity android:name=".MathPropNumContentPage"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".MathPN3" />
-        <activity android:name=".MathPN2" />
-        <activity android:name=".MathPN1" />
-        <activity android:name=".MathPropN3Quiz" />
-        <activity android:name=".MathPropN2Quiz" />
-        <activity android:name=".MathPropN1Quiz" />
-        <activity android:name=".MathNNQuiz3" />
-        <activity android:name=".MathNNQuiz2" />
-        <activity android:name=".MathNNQuiz1" />
-        <activity android:name=".MathNN3" />
-        <activity android:name=".MathNN1" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathPN3"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathPN2"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathPN1"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathPropN3Quiz"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathPropN2Quiz"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathPropN1Quiz"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathNNQuiz3"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathNNQuiz2"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathNNQuiz1"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathNN3"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathNN1"
+            android:screenOrientation = "portrait"/>
         <activity android:name=".MathNegNumContentPage"
             android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation = "portrait"
             />
-        <activity android:name=".MathAR2" />
-        <activity android:name=".MathAR1" />
-        <activity android:name=".MathARQuiz3" />
-        <activity android:name=".MathARQuiz2" />
-        <activity android:name=".MathARQuiz1" />
+        <activity android:name=".MathAR2"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathAR1"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathARQuiz3"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathARQuiz2"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathARQuiz1"
+            android:screenOrientation = "portrait"/>
         <activity android:name=".MathArithOperationContentPage"
             android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation = "portrait"
             />
-        <activity android:name=".MathPercentageContent" />
-        <activity android:name=".MathQuizPercentage" />
-        <activity android:name=".MathRateQuiz" />
+        <activity android:name=".MathPercentageContent"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathQuizPercentage"
+            android:screenOrientation = "portrait"/>
+        <activity android:name=".MathRateQuiz"
+            android:screenOrientation = "portrait"/>
         <activity
             android:name=".RatioContentPage"
+            android:screenOrientation = "portrait"
             android:label="@string/title_activity_ratio_content_page"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MathContentActivity"
+            android:screenOrientation = "portrait"
             android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".MathRatioQuiz1"
+            android:screenOrientation = "portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".MathRatioPage"
+            android:screenOrientation = "portrait"
             android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".MainActivity"
+            android:screenOrientation = "portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar">
 
             <intent-filter>
