--- a/SemesterProject/app/src/main/AndroidManifest.xml
+++ b/SemesterProject/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.semesterproject">
 
+    <supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MathNN2"></activity>
+        <activity android:name=".activity_science_matter_content"></activity>
+        <activity android:name=".activity_science_content" />
+        <activity android:name=".MathNN2" />
         <activity android:name=".MathPNx" />
         <activity android:name=".MathPN4" />
         <activity android:name=".MathAR3" />
         <activity android:name=".RateContentPage" />
-        <activity android:name=".MathPropNumContentPage"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".MathPropNumContentPage"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MathPN3" />
         <activity android:name=".MathPN2" />
         <activity android:name=".MathPN1" />
@@ -27,17 +36,17 @@
         <activity android:name=".MathNNQuiz1" />
         <activity android:name=".MathNN3" />
         <activity android:name=".MathNN1" />
-        <activity android:name=".MathNegNumContentPage"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
+        <activity
+            android:name=".MathNegNumContentPage"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MathAR2" />
         <activity android:name=".MathAR1" />
         <activity android:name=".MathARQuiz3" />
         <activity android:name=".MathARQuiz2" />
         <activity android:name=".MathARQuiz1" />
-        <activity android:name=".MathArithOperationContentPage"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
+        <activity
+            android:name=".MathArithOperationContentPage"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MathPercentageContent" />
         <activity android:name=".MathQuizPercentage" />
         <activity android:name=".MathRateQuiz" />
@@ -45,16 +54,16 @@
             android:name=".RatioContentPage"
             android:label="@string/title_activity_ratio_content_page"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MathContentActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
+        <activity
+            android:name=".MathContentActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MathRatioQuiz1" />
-        <activity android:name=".MathRatioPage"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MathRatioPage"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -62,11 +71,5 @@
             </intent-filter>
         </activity>
     </application>
-
-    <supports-screens
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="true"
-        android:xlargeScreens="true" />
 
 </manifest>
